<resources>
    <string name="app_name">PlantAppPal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="percentage">(%)</string>
    <string name="time">dd-mm-yyyy</string>
    <string name="qna_title">QNA TItle</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_form_fragment">Hello form fragment</string>
    <string name="hello_history_fragment">Hello history fragment</string>
    <string name="hello_camera_fragment">Hello camera fragment</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="welcome">Welcome</string>
    <string name="title_menu2">We are trying to analyze your plant\'s diseases</string>
    <string name="title_menu3">We are trying to give guidance material</string>
    <string name="login">Login</string>
    <string name="history">History</string>
    <string name="form">Form</string>

    <string-array name="name_disease">
        <item>ini tanaman</item>
        <item>ini tanaman</item>
        <item>ini tanaman</item>
    </string-array>

    <string-array name="date_history">
        <item>dd-mm-yyyy</item>
        <item>dd-mm-yyyy</item>
        <item>dd-mm-yyyy</item>
    </string-array>
    <string-array name="desc_disease">
        <item>ini deskripsi penyakit</item>
        <item>ini deskripsi penyakit</item>
        <item>ini deskripsi penyakit</item>
    </string-array>

    <string-array name="percentage">
        <item>(20%)</item>
        <item>(20%)</item>
        <item>(20%)</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/tanaman</item>
        <item>@drawable/tanaman</item>
        <item>@drawable/tanaman</item>
    </integer-array>

    <integer-array name="data_guidance_photo">
        <item>@drawable/img_guidance</item>
        <item>@drawable/img_guidance</item>
        <item>@drawable/img_guidance</item>
    </integer-array>

    <string-array name="data_title_guidance">
        <item>Panduan Memilih Pestisida yang Aman dan Efektif untuk Mengatasi Hama dan Penyakit</item>
        <item>Panduan Memilih Pestisida yang Aman dan Efektif untuk Mengatasi Hama dan Penyakit</item>
        <item>Panduan Memilih Pestisida yang Aman dan Efektif untuk Mengatasi Hama dan Penyakit</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="titleAddForm">Ask Your Question!</string>

    <string name="title_detail_guide">Panduan Memilih Pestisida yang Aman dan Efektif untuk Mengatasi Hama dan Penyakit</string>

    <string name="welcomeRegister">Create Account</string>
    <string name="hintLogin">Already Have An Account?</string>
    <string name="hyperlinkClick">Login Here</string>
    <string name="txt_login">Don\'t have an account?</string>
    <string name="loginitent"><u>Register</u></string>
    <string name="seeAll"><u>SeeAll</u></string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Description">Description</string>
    <string name="causes">Causes</string>
    <string name="treatment">Treatment</string>
    <string name="guidance">Guidance</string>
    <string name="title_guidance">this is title</string>
    <string name="Content">
        It is a long established fact that a reader will be distracted bythe readable content of a page when looking at its layout. The point of  using Lorem Ipsum is that it has a more-or-less normal distribution of  letters, as opposed to using \'Content here, content here\', making it  look like readable English. Many desktop publishing packages and web  page editors now use Lorem Ipsum as their default model text, and a  search for \'lorem ipsum\' will uncover many web sites still in their  infancy. Various versions have evolved over the years, sometimes by  accident, sometimes on purpose (injected humour and the like).
    </string>
    <string name="comment">Comment Goes Here\n</string>
    <string name="questionDetail">Question goes Here</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="commentEditText">Comment</string>
    <string name="seeall">SeeAll</string>
    <string name="step1">Step1</string>
    <string name="step2">Step2</string>
    <string name="step3">Step3</string>
    <string name="step4">Step4</string>
    <string name="step5">Step5</string>
    <string name="content_detail_guide">It is a long established fact that a reader will be distracted by  the readable content of a page when looking at its layout. </string>
    <string name="empty_image_warning">image is empty</string>
    <string name="comments">Comments</string>
    <string name="qna_desc">qna Desc</string>
    <string name="confirm_delete">Are you sure you want to delete this history?</string>
    <string name="failure_response">Something Unexpected Happend, Please try again later\n</string>


</resources>