<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:id="@+id/card_view"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/green"
            card_view:layout_constraintLeft_toLeftOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_card_leaf"
            android:layout_width="100dp"
            android:layout_height="100dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/leaf_img"/>

        <TextView
            android:id="@+id/nama_penyakit"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_penyakit"
            card_view:layout_constraintLeft_toRightOf="@+id/img_card_leaf"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/percentage"
            card_view:layout_constraintLeft_toRightOf="@+id/nama_penyakit"
            card_view:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/nama_penyakit"
            card_view:layout_constraintLeft_toRightOf="@+id/img_card_leaf"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>